examples/test/testpolicy5387.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5387
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key42: value35
      key47: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value48
          key9: value39
          key31: value36
      podSelector:
        matchLabels:
          key42: value15
          key32: value30
